@@ -1,0 +1,16 @@
+import re
+import os
+import AE.Component
+import SkunkWeb.Configuration
+
+testRE=re.compile(r'test(\d*)\.html')
+
+def getTestUrls(fs, directory):
+    m=[testRE.match(x) for x in fs.listdir(directory)]
+    f=[(int(y.group(1)), y.group(0)) for y in filter(None, m)]
+    f.sort()
+    return [x[1] for x in f]
+    
+directory=os.path.dirname(SkunkWeb.Configuration.documentRoot+AE.Component.rectifyRelativeName(uri))+'/'
+fs=SkunkWeb.Configuration.documentRootFS
+raise ReturnValue, getTestUrls(fs, directory)
